index.html edit

--- a/index.html
+++ b/index.html
@@ -2,11 +2,28 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + Tailwind</title>
+
+    <!-- Viewport -->
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <!-- Title -->
+    <title>create-bawo-frontend — Documentation</title>
+
+    <!-- SEO -->
+    <meta
+      name="description"
+      content="Official documentation for create-bawo-frontend — a zero-config CLI to scaffold React and Next.js projects."
+    />
+    <meta name="author" content="Joseph Bawo" />
+
+    <!-- Favicon (optional) -->
+    <!-- <link rel="icon" href="/favicon.ico" /> -->
   </head>
-  <body class="min-h-screen bg-white text-gray-900">
+
+  <body class="min-h-dvh bg-white text-gray-900 antialiased">
     <div id="root"></div>
+
+    <!-- React entry -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
