--- a/index.html
+++ b/index.html
@@ -7,17 +7,55 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Title -->
-    <title>create-bawo-frontend — Documentation</title>
+    <title>create-bawo-frontend — Zero-Config React & Next.js Scaffold</title>
 
-    <!-- SEO -->
+    <!-- Primary SEO -->
     <meta
       name="description"
-      content="Official documentation for create-bawo-frontend — a zero-config CLI to scaffold React and Next.js projects."
+      content="Official documentation for create-bawo-frontend — a zero-config CLI to instantly scaffold modern React and Next.js projects with Tailwind CSS, GSAP, and Framer Motion."
     />
     <meta name="author" content="Joseph Bawo" />
+    <meta
+      name="keywords"
+      content="create-bawo-frontend, react scaffold, nextjs scaffold, tailwind cli, frontend starter, react cli, joseph bawo"
+    />
 
-    <!-- Favicon (optional) -->
-    <!-- <link rel="icon" href="/favicon.ico" /> -->
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+
+    <!-- Apple -->
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+
+    <!-- PWA -->
+    <link rel="manifest" href="/site.webmanifest" />
+
+    <!-- Open Graph (Facebook, LinkedIn) -->
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:title"
+      content="create-bawo-frontend — Zero-Config Frontend Scaffold"
+    />
+    <meta
+      property="og:description"
+      content="Scaffold production-ready React and Next.js apps instantly with Tailwind, GSAP, and Framer Motion."
+    />
+    <meta property="og:image" content="/logo.png" />
+    <meta property="og:url" content="https://create-bawo-frontend.vercel.app" />
+    <meta property="og:site_name" content="create-bawo-frontend" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="create-bawo-frontend" />
+    <meta
+      name="twitter:description"
+      content="Zero-config CLI to scaffold modern React & Next.js projects."
+    />
+    <meta name="twitter:image" content="/logo.png" />
+
+    <!-- Theme -->
+    <meta name="theme-color" content="#f59e0b" />
   </head>
 
   <body class="min-h-dvh bg-white text-gray-900 antialiased">
