--- a/index.html
+++ b/index.html
@@ -20,6 +20,29 @@
       content="create-bawo-frontend, react scaffold, nextjs scaffold, tailwind cli, frontend starter, react cli, joseph bawo"
     />
 
+    <!-- Twitter (X) SEO -->
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:site" content="@josephbawo" />
+<meta name="twitter:creator" content="@josephbawo" />
+<meta
+  name="twitter:title"
+  content="create-bawo-frontend — Zero-Config Frontend Scaffold"
+/>
+<meta
+  name="twitter:description"
+  content="Instantly scaffold modern React & Next.js apps with Tailwind CSS, GSAP, and Framer Motion using a zero-config CLI."
+/>
+<meta name="twitter:image" content="https://create-bawo-frontend.vercel.app/logo.png" />
+<meta
+  name="twitter:image:alt"
+  content="create-bawo-frontend CLI logo"
+/>
+<meta
+  name="twitter:url"
+  content="https://create-bawo-frontend.vercel.app"
+/>
+
+
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
