--- a/index.html
+++ b/index.html
@@ -20,28 +20,50 @@
       content="create-bawo-frontend, react scaffold, nextjs scaffold, tailwind cli, frontend starter, react cli, joseph bawo"
     />
 
-    <!-- Twitter (X) SEO -->
-<meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:site" content="@josephbawo" />
-<meta name="twitter:creator" content="@josephbawo" />
-<meta
-  name="twitter:title"
-  content="create-bawo-frontend — Zero-Config Frontend Scaffold"
-/>
-<meta
-  name="twitter:description"
-  content="Instantly scaffold modern React & Next.js apps with Tailwind CSS, GSAP, and Framer Motion using a zero-config CLI."
-/>
-<meta name="twitter:image" content="https://create-bawo-frontend.vercel.app/logo.png" />
-<meta
-  name="twitter:image:alt"
-  content="create-bawo-frontend CLI logo"
-/>
-<meta
-  name="twitter:url"
-  content="https://create-bawo-frontend.vercel.app"
-/>
+    <!-- Open Graph (Facebook, LinkedIn, WhatsApp, Telegram) -->
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:title"
+      content="create-bawo-frontend — Zero-Config Frontend Scaffold"
+    />
+    <meta
+      property="og:description"
+      content="Instantly scaffold modern React & Next.js apps with Tailwind CSS, GSAP, and Framer Motion using a zero-config CLI."
+    />
+    <meta
+      property="og:image"
+      content="https://create-bawo-frontend.vercel.app/logo.png"
+    />
+    <meta
+      property="og:url"
+      content="https://create-bawo-frontend.vercel.app"
+    />
+    <meta property="og:site_name" content="create-bawo-frontend" />
 
+    <!-- Twitter (X) SEO -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@josephbawo" />
+    <meta name="twitter:creator" content="@josephbawo" />
+    <meta
+      name="twitter:title"
+      content="create-bawo-frontend — Zero-Config Frontend Scaffold"
+    />
+    <meta
+      name="twitter:description"
+      content="Instantly scaffold modern React & Next.js apps with Tailwind CSS, GSAP, and Framer Motion using a zero-config CLI."
+    />
+    <meta
+      name="twitter:image"
+      content="https://create-bawo-frontend.vercel.app/logo.png"
+    />
+    <meta
+      name="twitter:image:alt"
+      content="create-bawo-frontend CLI logo"
+    />
+    <meta
+      name="twitter:url"
+      content="https://create-bawo-frontend.vercel.app"
+    />
 
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
@@ -53,29 +75,6 @@
 
     <!-- PWA -->
     <link rel="manifest" href="/site.webmanifest" />
-
-    <!-- Open Graph (Facebook, LinkedIn) -->
-    <meta property="og:type" content="website" />
-    <meta
-      property="og:title"
-      content="create-bawo-frontend — Zero-Config Frontend Scaffold"
-    />
-    <meta
-      property="og:description"
-      content="Scaffold production-ready React and Next.js apps instantly with Tailwind, GSAP, and Framer Motion."
-    />
-    <meta property="og:image" content="/logo.png" />
-    <meta property="og:url" content="https://create-bawo-frontend.vercel.app" />
-    <meta property="og:site_name" content="create-bawo-frontend" />
-
-    <!-- Twitter Card -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="create-bawo-frontend" />
-    <meta
-      name="twitter:description"
-      content="Zero-config CLI to scaffold modern React & Next.js projects."
-    />
-    <meta name="twitter:image" content="/logo.png" />
 
     <!-- Theme -->
     <meta name="theme-color" content="#f59e0b" />
